<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="160dp"
        android:layout_height="157dp"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/nibir"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:paddingTop="10dp"
        android:text="@string/my_name"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="28sp"
        android:textStyle="bold" />
    <TextView
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Android Apps Developer"
        android:layout_marginLeft="100dp"
        android:padding="1dp"
        android:textSize="20dp"
        android:textColor="@android:color/holo_blue_dark"/>


    <Button
        android:layout_width="395dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:drawableLeft="@drawable/education"
        android:text="@string/edu"
        android:textSize="20dp" />

    <Button
        android:id="@+id/id_call"
        android:layout_width="347dp"
        android:layout_height="57dp"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/smartphone"
        android:text="@string/phone"
        android:textSize="20dp" />

    <Button
        android:id="@+id/gmail_id"
        android:layout_width="345dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/gmail"
        android:text="@string/gmail"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <Button
        android:id="@+id/id_fb"
        android:layout_width="378dp"
        android:layout_height="57dp"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/facebook"
        android:text="@string/fb"
        android:textSize="20dp"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/id_location"
        android:layout_width="378dp"
        android:layout_height="112dp"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/place"
        android:text="@string/location"
        android:textAllCaps="false"
        android:textSize="20dp" />



</LinearLayout>